# tom-demo

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  MANIFEST.in  README-dev.md  README-vue.md  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt
demo_code/: apps.py
demo_code/facilities/: custom_lco.py
demo_code/templatetags/: demo_extras.py
facilities/: custom_lco.py  custom_manual.py  restricted_lco.py
helm-chart/: Chart.yaml  requirements.yaml  values-dev-helm3.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingester.yaml  ingress.yaml
static/: urls.json
static/public/: urls.json
static/tom_common/css/: custom.css
templates/: superevent_vue_app.html  target_list.html  vue_app_01.html  vue_app_02.html  vue_health_check.html
templates/tom_alerts/: query_result.html
templates/tom_common/: base.html  index.html  navbar_content.html
templates/tom_demo/: target_list.html  vue_app_01.html
templates/tom_observations/: observationrecord_detail.html
templates/tom_targets/: target_detail.html
tom_demo/: apps.py  models.py  settings.py  urls.py  views.py
tom_demo/management/commands/: convert_targets.py  seeddata.py  todos
tom_demo/migrations/: 0001_initial.py
tom_demo/tests/: test.py
tom_demo_base/: settings.py  urls.py  wsgi.py
vue/: .env  .env.production  .env.staging  package-lock.json  package.json  vue.config.js
vue/src/: App.vue  App02.vue  Superevent.vue  SupereventDetail.vue  TargetList.vue  main.js  main_02.js  superevent.js  target_list.js
vue/src/components/: AddCandidateModal.vue  AlertsTable.vue  CandidateForm.vue  CandidateTargetTable.vue  CreateTargetModal.vue  GravitationalWaveBanner.vue  SelectableTargetTable.vue  SimpleCounter.vue  index.js
vue/src/views/: TargetList.vue  TargetListView.vue
vue/src/vuex/: vuex_store_as_plugin.js
